# opengl-samples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: fragmentcore.glsl  vertexcore.glsl
src/: main.cpp
